--- a/index.html
+++ b/index.html
@@ -15,23 +15,60 @@
           <h1>Welcome to Pat's Salmon Cookies!</h1>
           <nav>
               <ul>
-                  <li><a href="#section1">Home</a></li>
-                  <li><a href="#section2">Sales Data</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="sales.html">Sales Data</a></li>
               </ul>
           </nav>
       </header>
 
       <main>
-          <section id="location">
+        <div id="homePage">
+          </div>
+        <section class="salmonPic">
+              <img src="salmon.png"/>
+        </section>
+        <hr class="separator">
+        <section>
 
-          </section>
+          <!-- hiding previous code
+             <h2>Seattle</h2>
+            <ul>
+              <li>Hours Open: 6am - 7pm</li>
+              <li>Contact Info: 123-456-7890</li>
+              <li>location: 2901 3rd Ave #300, Seattle, WA 98121</li>
+            </ul>
+          <h2>Tokyo</h2>
+                <ul>
+                  <li>Hours Open: 6am - 7pm</li>
+                  <li>Contact Info: 123-456-7890</li>
+                  <li>location: 2901 3rd Ave #300, Seattle, WA 98121</li>
+                </ul>
+              <h2>Dubai</h2>
+                <ul>
+                  <li>Hours Open: 6am - 7pm</li>
+                  <li>Contact Info: 123-456-7890</li>
+                  <li>location: 2901 3rd Ave #300, Seattle, WA 98121</li>
+                </ul>
+              <h2>Paris</h2>
+                <ul>
+                  <li>Hours Open: 6am - 7pm</li>
+                  <li>Contact Info: 123-456-7890</li>
+                  <li>location: 2901 3rd Ave #300, Seattle, WA 98121</li>
+                </ul>
+              <h2>Lima</h2>
+                <ul>
+                  <li>Hours Open: 6am - 7pm</li>
+                  <li>Contact Info: 123-456-7890</li>
+                  <li>location: 2901 3rd Ave #300, Seattle, WA 98121</li>
+                </ul> -->
+            </section>
       </main>
 
       <footer>
           <p>&copy; 2023 Pat's Salmon Cookies</p>
       </footer>
 
-      <script src="js/app.js"></script>
+      <script src="js/home.js"></script>
     </body>
 
 </html>
