adding table to html and css for lab 7

--- a/sales.html
+++ b/sales.html
@@ -22,8 +22,138 @@
       </header>
 
       <main>
-          <div id="salesPage">
-            </div>
+        <div id="salesPage"></div>
+        <table>
+          <thead>
+            <tr>
+              <th></th>
+              <th>6:00am</th>
+              <th>7:00am</th>
+              <th>8:00am</th>
+              <th>9:00am</th>
+              <th>10:00am</th>
+              <th>11:00am</th>
+              <th>12:00pm</th>
+              <th>1:00pm</th>
+              <th>2:00pm</th>
+              <th>3:00pm</th>
+              <th>4:00pm</th>
+              <th>5:00pm</th>
+              <th>6:00pm</th>
+              <th>7:00pm</th>
+              <th>Daily Location Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>Seattle</th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+            </tr>
+            <tr>
+              <th>Tokyo</th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+            </tr>
+            <tr>
+              <th>Dubai</th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+            </tr>
+            <tr>
+              <th>Paris</th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+            </tr>
+            <tr>
+              <th>Lima</th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+            </tr>
+            <tr>
+              <th>Totals</th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+              <th></th>
+            </tr>
+          </tbody>
+          <tfoot>
+
+          </tfoot>
+        </table>
+
+
       </main>
 
       <footer>
