--- a/sales2.html
+++ b/sales2.html
@@ -16,20 +16,21 @@
           <nav>
               <ul>
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="sales.html">Sales Data</a></li>
+                  <li><a href="sales2.html">Sales Data</a></li>
               </ul>
           </nav>
       </header>
 
       <main>
-        <div id="salesPage"></div>
+        <div id="salesPage2"></div>
+
       </main>
 
       <footer>
           <p>&copy; 2023 Pat's Salmon Cookies</p>
       </footer>
 
-      <script src="js/sales.js"></script>
+      <script src="js/sales2.js"></script>
     </body>
 
 </html>
