made edits to the table

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <hr class="separator">
         <section>
 
-          <!-- hiding previous code for later review
+          <!-- hiding previous code for later
              <h2>Seattle</h2>
             <ul>
               <li>Hours Open: 6am - 7pm</li>
