added the input, updated table and home page

--- a/index.html
+++ b/index.html
@@ -11,64 +11,32 @@
   </head>
 
   <body>
-      <header>
-          <h1>Welcome to Pat's Salmon Cookies!</h1>
-          <nav>
-              <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="sales.html">Sales Data</a></li>
-              </ul>
-          </nav>
-      </header>
+    <header>
+      <h1>Welcome to Pat's Salmon Cookies!</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="sales.html">Sales Data</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <main>
-        <div id="homePage">
-          </div>
-        <section class="salmonPic">
-              <img src="salmon.png"/>
-        </section>
+    <main>
+      <section class="salmonPic">
+        <img src="img/salmon.png"/>
+      </section>
+      </section>
         <hr class="separator">
-        <section>
+      <section>
+      <div id="homePage">
+      </div>
+    </main>
 
-          <!-- hiding previous code for later
-             <h2>Seattle</h2>
-            <ul>
-              <li>Hours Open: 6am - 7pm</li>
-              <li>Contact Info: 123-456-7890</li>
-              <li>location: 2901 3rd Ave #300, Seattle, WA 98121</li>
-            </ul>
-          <h2>Tokyo</h2>
-                <ul>
-                  <li>Hours Open: 6am - 7pm</li>
-                  <li>Contact Info: 123-456-7890</li>
-                  <li>location: 2901 3rd Ave #300, Seattle, WA 98121</li>
-                </ul>
-              <h2>Dubai</h2>
-                <ul>
-                  <li>Hours Open: 6am - 7pm</li>
-                  <li>Contact Info: 123-456-7890</li>
-                  <li>location: 2901 3rd Ave #300, Seattle, WA 98121</li>
-                </ul>
-              <h2>Paris</h2>
-                <ul>
-                  <li>Hours Open: 6am - 7pm</li>
-                  <li>Contact Info: 123-456-7890</li>
-                  <li>location: 2901 3rd Ave #300, Seattle, WA 98121</li>
-                </ul>
-              <h2>Lima</h2>
-                <ul>
-                  <li>Hours Open: 6am - 7pm</li>
-                  <li>Contact Info: 123-456-7890</li>
-                  <li>location: 2901 3rd Ave #300, Seattle, WA 98121</li>
-                </ul> -->
-            </section>
-      </main>
+    <footer>
+      <p>&copy; 2023 Pat's Salmon Cookies</p>
+    </footer>
 
-      <footer>
-          <p>&copy; 2023 Pat's Salmon Cookies</p>
-      </footer>
-
-      <script src="js/home.js"></script>
-    </body>
+    <script src="js/home.js"></script>
+  </body>
 
 </html>
