updating lab 10b with additional JS and CSS

--- a/sales.html
+++ b/sales.html
@@ -33,7 +33,7 @@
 
         <input name="avgCookiesPerSale" id="avgCookiesPerSale" placeholder="Average Cookies Per Sale">
 
-        <button type="submit">Click Here to Add</button>
+        <button id="addLocation" type="submit">Click Here to Add</button>
         <div id="salesPage"></div>
       </main>
 
